<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.vishal.roomfulldemo.viewmodel.AddItemsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.AddItemsPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/setImg"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:onClick="@{viewModel::onImageClick}"
                    app:itemImage="@{viewModel.items.image}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/title"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={viewModel.items.name}"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/description"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={viewModel.items.desc}"
                    android:textSize="@dimen/_12ssp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:onClick="@{viewModel::addItemsClick}"
                    android:text="@string/add" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>